2002-04-26  Dan Winship  <danw@ximian.com>

	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_read_cb): Fix
	this to check SSL_pending *after* doing the read.
	(soup_openssl_add_watch): Switch back to the version that uses
	soup_openssl_read_cb.

	* src/soup-ssl-proxy/soup-ssl-proxy.c (main): Set all sockets to
	blocking, since we only try to read when there's data to be read,
	and we're not prepared to deal with the possibility of not being
	able to write.

	* configure.in (POPT_LIBS): Fix typo (s/prefix/popt_prefix/) so we
	don't get -LNONE when configured without a --prefix

2002-04-11  Alex Graveley  <alex@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Bump version to
        0.7.2.1. This release contains the SSL_connect revert only.

2002-04-11  Alex Graveley  <alex@ximian.com>

	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_get_iochannel):
	Revert to prior SSL_connect borkenness, as the current code
	contains an infinite loop.

2002-04-08  Alex Graveley  <alex@ximian.com>

        * configure.in, src/libsoup/soup-private.h: Bump version to
        0.7.2.  A stable feature release.  Yay!

2002-04-08  Alex Graveley  <alex@ximian.com>

	* src/soup-wsdl/wsdl-trace.c (wsdl_get_output_file): Gets the
	current output file.
	(wsdl_set_output_file): Sets it.

	* src/soup-wsdl/wsdl-soap-headers.c (wsdl_emit_soap_headers): Lame
	hack around systems that don't have stdarg macros.

	* src/soup-wsdl/wsdl-soap-stubs.c (wsdl_emit_soap_stubs): Ditto.

	* src/soup-wsdl/wsdl-soap-skels.c (wsdl_emit_soap_skels): Ditto.

	* src/soup-wsdl/wsdl-soap-common.c (wsdl_emit_soap_common): Ditto.

2002-04-08  Alex Graveley  <alex@ximian.com>

	Fixes backported from HEAD:

	* src/libsoup/soup-queue.c (soup_queue_read_headers_cb): Handle
	forced no-content response codes 204, 205, and 304.  Check
	transfer-encoding before content-length to handle broken
	Traffic-Server proxies.

	* src/libsoup/soup-server.c (soup_server_get_handler): Return