@@ -1,3 +1,9 @@
+2002-04-30  Alex Graveley  <alex@ximian.com>
+
+	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_get_iochannel):
+	Loop on SSL_connect until it either returns error or success,
+	blocking on need-read/need-write if necessary.
+
 2002-04-26  Dan Winship  <danw@ximian.com>
 
 	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_read_cb): Fix
